<resources>
    <string name="app_name">MarketApp</string>
    <string name="id">ID</string>
    <string name="password">password</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="passwordCheck">passwordCheck</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="login_failure">Login Failure</string>
    <string name="regist_failure">Registration Failure</string>
    <string name="hello">Hello</string>
    <string name="view_all_store_list">View All Store List</string>
    <string name="view_subscribed_store_list">View Subscribed Store List</string>
    <string name="user_inform">user Inform</string>
    <string name="menu">menu</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="textView_user_email">User Email :</string>
    <string name="textView_user_name">User Name :</string>
    <string name="textView_user_address">User Address :</string>
    <string name="update_profile">Update profile</string>
    <string name="back_to_main">Back to Main</string>
    <string name="are_you_an_owner">Are you an owner?</string>
    <string name="view_my_store">View My Store</string>
    <string name="owner_inform">Owner Information</string>
    <string name="user_email">User Email :</string>
    <string name="user_name">User Name :</string>
    <string name="user_address">User Address :</string>
    <string name="owner_name">Owner Name :</string>
    <string name="owner_address">Owner Address :</string>
    <string name="add_new_store">Add New Store</string>
    <string name="province">Province</string>
    <string name="update_store_info">Update Store Info</string>
    <string name="view_products">View Products</string>
    <string name="delete_store">Delete Store</string>
    <string name="store_name">Store Name</string>
</resources>
