<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_name" />

        <EditText
            android:id="@+id/etStoreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            android:id="@+id/etStoreAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city" />

        <EditText
            android:id="@+id/etStoreCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/province" />

        <EditText
            android:id="@+id/etStoreProvince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postal_code" />

        <EditText
            android:id="@+id/etStorePostalCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country" />

        <EditText
            android:id="@+id/editTextCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
    </LinearLayout>

</LinearLayout>