<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvStoreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvStoreAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnUpdateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/update_store_info" />

    <Button
        android:id="@+id/btnViewProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_products" />

    <Button
        android:id="@+id/btnDeleteStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_store" />
</LinearLayout>